--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,12 +217,14 @@ body.active { overflow: hidden; }
 .btn-primary:is(:hover, :focus) {
   background: var(--color-primary);
   color: var(--bg-primary);
+  align-self: flex-end;
 }
 
 .btn-secondary {
   background: var(--raw-seinna);
   border-color: var(--raw-seinna);
   color: var(--black);
+  align-self: flex-end;
 }
 
 .btn-secondary:is(:hover, :focus) { --raw-seinna: hsl(24, 74%, 64%); }
