btn group back to flex-start

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -992,7 +992,7 @@ textarea.input-field {
 
   .btn-group {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     gap: 20px;
   }
